k8s-kustomize/services/order.api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - image: order-api # must much from ./kustomization.yaml -> images[0].name
        imagePullPolicy: IfNotPresent
        name: order-api
        ports:
          - containerPort: 8090
        readinessProbe:
          httpGet:
            path: /order/health
            port: 8090
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /order/health
            port: 8090
          initialDelaySeconds: 60
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits:
            memory: "256Mi"
            cpu: "400m"
