k8s-kustomize/services/order.api/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: basket-api
spec:
  gateways:
  - restaurant-gateway
  http:
  - match:
    - uri:
        prefix: /order
    route:
    - destination:
        host: order-api
        port:
          number: 80
